# link

./: .appveyor.yml  .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  AbletonLinkConfig.cmake  CMakeLists.txt  CONTRIBUTING.md  README.md  TEST-PLAN.md
.github/workflows/: ci.yml  clang-tidy.yml
ci/: build.py  check-formatting.py  configure.py  install-qt-5.sh  run-tests.py
cmake_include/: AsioStandaloneConfig.cmake  CatchConfig.cmake  ConfigureAbletonLink.cmake  ConfigureAsioStandalone.cmake  ConfigureCompileFlags.cmake  ConfigureWordSize.cmake  compile-flags.cmake  platform.cmake  word-size.cmake
examples/: CMakeLists.txt
examples/esp32/: .gitignore  CMakeLists.txt  sdkconfig
examples/esp32/main/: CMakeLists.txt  main.cpp
examples/linkaudio/: AudioEngine.cpp  AudioEngine.hpp  AudioEngine.ipp  AudioPlatform.hpp  AudioPlatform_Asio.cpp  AudioPlatform_Asio.hpp  AudioPlatform_Asio.ipp  AudioPlatform_CoreAudio.cpp  AudioPlatform_CoreAudio.hpp  AudioPlatform_CoreAudio.ipp  AudioPlatform_Dummy.hpp  AudioPlatform_Jack.cpp  AudioPlatform_Jack.hpp  AudioPlatform_Jack.ipp  AudioPlatform_Portaudio.cpp  AudioPlatform_Portaudio.hpp  AudioPlatform_Portaudio.ipp  AudioPlatform_Wasapi.cpp  AudioPlatform_Wasapi.hpp  AudioPlatform_Wasapi.ipp  LinkAudioRenderer.hpp
examples/linkaudiohut/: main.cpp
examples/linkc/: LinkC.def  LinkC.h  main.cpp
examples/linkhut/: main.cpp
examples/qlinkhut/: BeatTile.qml  Controller.cpp  Controller.hpp  main.cpp  main.qml  resources.qrc
extensions/abl_link/: CMakeLists.txt  abl_link.cmake
extensions/abl_link/examples/link_audio_hut/: main.c
extensions/abl_link/examples/link_hut/: main.c
extensions/abl_link/include/: abl_link.h
extensions/abl_link/src/: abl_link.cpp
include/: CMakeLists.txt
include/ableton/: Link.hpp  Link.ipp  LinkAudio.hpp  LinkAudio.ipp
include/ableton/discovery/: AsioTypes.hpp  InterfaceScanner.hpp  IpInterface.hpp  IpV4Interface.hpp  Messenger.hpp  NetworkByteStreamSerializable.hpp  Payload.hpp  PeerGateway.hpp  PeerGateways.hpp  PeerObserver.hpp  Service.hpp  Socket.hpp  UdpMessenger.hpp  UnicastIpInterface.hpp
include/ableton/discovery/asio/: AsioService.hpp  AsioTimer.hpp  AsioWrapper.hpp
include/ableton/discovery/test/: Interface.hpp  PayloadEntries.hpp  Socket.hpp
include/ableton/discovery/util/: Injected.hpp  Log.hpp  PooledHandlerService.hpp  SafeAsyncHandler.hpp  Timer.hpp  Unwrap.hpp
include/ableton/discovery/util/test/: IoService.hpp  Timer.hpp
include/ableton/discovery/v1/: Messages.hpp
include/ableton/link/: ApiConfig.hpp  Beats.hpp  CircularFifo.hpp  ClientBeatTimeline.hpp  ClientSessionTimelines.hpp  Controller.hpp  EndpointV4.hpp  EndpointV6.hpp  Gateway.hpp  GhostXForm.hpp  HostTimeUtility.hpp  Kalman.hpp  LinearRegression.hpp  Measurement.hpp  MeasurementEndpointV4.hpp  MeasurementEndpointV6.hpp  MeasurementService.hpp  NodeId.hpp  NodeState.hpp  Optional.hpp  PayloadEntries.hpp  PeerState.hpp  Peers.hpp  Phase.hpp  PingResponder.hpp  SessionController.hpp  SessionId.hpp  SessionState.hpp  Sessions.hpp  StartStopState.hpp  Tempo.hpp  Timeline.hpp  TripleBuffer.hpp
include/ableton/link/v1/: Messages.hpp
include/ableton/link_audio/: ApiConfig.hpp  AudioBuffer.hpp  BeatTimeMapping.hpp  Buffer.hpp  ChannelAnnouncements.hpp  ChannelId.hpp  ChannelRequests.hpp  Channels.hpp  Controller.hpp  Encoder.hpp  Id.hpp  MainProcessor.hpp  NetworkMetrics.hpp  PCMCodec.hpp  PeerAnnouncement.hpp  PeerGateways.hpp  PeerInfo.hpp  Queue.hpp  Receivers.hpp  Resizer.hpp  SessionController.hpp  Sink.hpp  SinkProcessor.hpp  Source.hpp  SourceProcessor.hpp  UdpMessenger.hpp
include/ableton/link_audio/v1/: Messages.hpp
include/ableton/test/: CatchWrapper.hpp  Platform.hpp
include/ableton/test/serial_io/: Context.hpp  Fixture.hpp  Socket.hpp  Timer.hpp
include/ableton/util/: FloatIntConversion.hpp  Injected.hpp  Locked.hpp  Log.hpp  TripleBuffer.hpp
include/ableton/util/test/: IoService.hpp  Timer.hpp
scripts/: add_gui_env.sh  build.py  build_abl_link_sdk_gyp.sh  configure.py  install-dependencies.py  memcheck.supp  run-tests.py  run_tests.sh
src/: CMakeLists.txt
src/ableton/: tst_Link.cpp
src/ableton/discovery/: tst_InterfaceScanner.cpp  tst_NetworkByteStreamSerializable.cpp  tst_Payload.cpp  tst_PeerGateway.cpp  tst_PeerGateways.cpp  tst_UdpMessenger.cpp
src/ableton/discovery/v1/: tst_Messages.cpp
src/ableton/link/: tst_Beats.cpp  tst_CircularFifo.cpp  tst_ClientBeatTimeline.cpp  tst_ClientSessionTimelines.cpp  tst_Controller.cpp  tst_HostTimeUtility.cpp  tst_InterfaceScanner.cpp  tst_Kalman.cpp  tst_LinearRegression.cpp  tst_Measurement.cpp  tst_Median.cpp  tst_NodeId.cpp  tst_PeerState.cpp  tst_Peers.cpp  tst_Phase.cpp  tst_PingResponder.cpp  tst_StartStopState.cpp  tst_Tempo.cpp  tst_Timeline.cpp
src/ableton/link_audio/: tst_AudioBuffer.cpp  tst_BeatTimeMapping.cpp  tst_ChannelAnnouncements.cpp  tst_ChannelId.cpp  tst_ChannelRequests.cpp  tst_Channels.cpp  tst_Encoder.cpp  tst_MainProcessor.cpp  tst_PCMCodec.cpp  tst_PeerAnnouncement.cpp  tst_PeerGateways.cpp  tst_Queue.cpp  tst_Receivers.cpp  tst_Resizer.cpp  tst_UdpMessenger.cpp
src/ableton/link_audio/v1/: tst_Messages.cpp
src/ableton/platform/: Posix.cpp  Winsocket.cpp
src/ableton/test/catch/: CatchMain.cpp
src/ableton/test/serial_io/: SchedulerTree.cpp
src/ableton/util/: tst_FloatIntConversion.cpp  tst_TripleBuffer.cpp
src/test/catch/: CatchMain.cpp
